# drawio2tikz

./: .gitignore  README.md  bun.lockb  package.json  pyproject.toml
.github/: release.yml
.github/workflows/: ci.yml  release.yml
example/: README.md  sample-preview.tex  sample.drawio
example/tikz/: sample.tex
src/drawio2tikz/: __init__.py  __main__.py  cli.py  converter.py  drawio.py  svg.py
stubs/drawio2tikz/: __init__.pyi
stubs/svg2tikz/: __init__.pyi
tests/: __init__.py  test_cli.py  test_drawio_labels.py
